# storyvote

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  build.rs  package-lock.json  package.json  playwright.config.js
.github/workflows/: ci.yml  release.yml
src/: http.rs  main.rs  messages.rs  state.rs  ui.rs  ws.rs
tests/e2e/: ui-smoke.spec.js
