[package]
name = "storyvote"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Agile story point estimation server"
authors = ["ahsodex"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
dns-lookup = "2.0"
local-ip-address = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.24"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
